Fixed text overflow on pop up

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -271,8 +271,8 @@ h3 span {
 }
 
 iframe {
-  height: 60vh;
-  width: 80vw;
+  height: 40vh;
+  width: 90vw;
   border: none;
 }
 
